--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 # Specify filepatterns you want git to ignore.
 ControlFirmware/Debug
+ControlFirmware/Release
+ControlFirmware/.settings
+ControlFirmware/ControlFirmware*.launch
 
