no ROS lib in SMDFireTest repo

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ ControlFirmware/Debug
 ControlFirmware/Release
 ControlFirmware/.settings
 ControlFirmware/ControlFirmware*.launch
+SMDFireTest/lib/ros_lib
 .metadata
